gccida/g2/mark_effect
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_effect/src/cfgcleanup.c:678:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)exp->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_effect/src/cfgcleanup.c:691:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v7] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_effect/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_effect/src/cfgcleanup.c:725:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)exp->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_effect/src/cfgcleanup.c:738:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v12] - 5) <= 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_effect/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_effect/src/obj/cfgcleanup.o] Error 1
